Fix [UI] Header flicker while navigating (#1239)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,7 +34,7 @@ body {
   isolation: isolate;
 }
 
-.app {
+.ml-app {
   display: flex;
   width: 100%;
 }
